# vilcos

./: .dockerignore  .env-sample  .gitignore  README.md  app.py  chainlit.md  deploy.sh  fly.toml  force-rebuild.sh  main.py  package-lock.json  package.json  post-process.js  postcss.config.js  publish-functions.js  publish.sh  pyproject.toml  requirements.txt  run.py  start.sh  tailwind.config.js  vilcos  vite.config.js  watch-templates.js
assets/default-templates/: index.html
assets/default-templates/src/: main.js  style.css
docker-deploy/: Caddyfile  Dockerfile
docs/: getting-started.md  index.md
enferno/: app.py  commands.py  settings.py
enferno/portal/: views.py
enferno/templates/: dashboard.html  index.html
enferno/templates/auth/: signin.html  signout.html
enferno/user/: models.py  views.py
vilcos/: app.py  auth_utils.py  cli.py  commands.py  config.py  database.py  db.py  extensions.py  main.py  models.py  schemas.py
vilcos/data/: desserts.json  extras.json  kids.json  korean-bbq.json  korean-classics.json  salads.json  starters.json
vilcos/portal/: views.py
vilcos/public/: views.py
vilcos/routes/: __init__.py  api.py  auth.py  payment.py  websockets.py
vilcos/tasks/: __init__.py
vilcos/templates/: base.html  booking.html  dashboard.html  index.html  layout.html  menus.html
vilcos/templates/admin/: users.html
vilcos/templates/auth/: callback.html  signin.html  signup.html
vilcos/templates/booking/: cancel.html  success.html
vilcos/user/: views.py
vilcos/utils/: base.py
